# lgtbrain

./: CMakeLists.txt  Makefile  build.sh  dataReadThread.cc  gauge.cc  gauge.hh  gaugeCluster.cc  gaugeCluster.hh  lgtbrain.pro  main.cc  subapi.py
src/: CMakeLists.txt  CumulativeLCDGauge.cc  CumulativeLCDGauge.hh  LCDGauge.cc  LCDGauge.hh  bar.cc  bar.hh  barGauge.cc  barGauge.hh  dataReadThread.cc  dataReadThread.hh  dummyDataReadThread.cc  dummyDataReadThread.hh  gauge.cc  gaugeCluster.cc  gaugeCluster.hh  lgtdisplay.cc  mainWindow.cc  mainWindow.hh
